# pyLineFollowerTrackGenerator

./: .pylintrc  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: test.yml
database/: friction.json
doc/examples/etrack/: etrack.wbt
doc/examples/grid/: grid.wbt
doc/examples/simple/: simple.wbt
examples/etrack/: etrack.wbt  generate.bat
examples/grid/: generate.bat  grid.wbt  grid_points.json
examples/simple/: generate.bat  simple.wbt
scripts/: generate.py
src/pyLineFollowerTrackGenerator/: __init__.py  __main__.py  cmd_etrack.py  cmd_friction.py  cmd_grid.py  cmd_simple.py  constants.py  friction.py  prg_arg_parser.py  util.py  version.py
src/pyLineFollowerTrackGenerator/base/: code_format.py  field.py  fields.py  node.py  proto.py  world_file.py
src/pyLineFollowerTrackGenerator/nodes/: Accelerometer.py  Altimeter.py  Appearance.py  Background.py  BallJoint.py  BallJointParameters.py  Billboard.py  Box.py  Brake.py  CadShape.py  Camera.py  Capsule.py  Charger.py  Color.py  Compass.py  Cone.py  Connector.py  ContactProperties.py  Coordinate.py  Cylinder.py  Damping.py  Device.py  DirectionalLight.py  Display.py  DistanceSensor.py  ElevationGrid.py  Emitter.py  Fluid.py  Focus.py  Fog.py  GPS.py  Group.py  Gyro.py  Hinge2Joint.py  HingeJoint.py  HingeJointParameters.py  ImageTexture.py  ImmersionProperties.py  IndexedFaceSet.py  IndexedLineSet.py  (+51 more)
tests/: __init__.py
