[metadata]
name = pyLineFollowerTrackGenerator
version = attr: pyLineFollowerTrackGenerator.version.__version__
description = A CLI tool to generate a Webots world with a random line follower track.
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/BlueAndi/pyLineFollowerTrackGenerator
author = Andreas Merkle
author_email = web@blue-andi.de
license = MIT
license_files = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
project_urls = 
    Documentation = https://github.com/BlueAndi/pyLineFollowerTrackGenerator
    Source = https://github.com/BlueAndi/pyHepyLineFollowerTrackGeneratorxDump
    Tracker = https://github.com/BlueAndi/pyLineFollowerTrackGenerator/issues

[options]
package_dir=
    =src
packages = find:
zip_safe = False
platforms = any
include_package_data = True
install_requires =
    matplotlib >= 3.8.3
    numpy >= 1.26.4
    scipy >= 1.12.0
    toml >= 0.10.2
python_requires = >=3.9
setup_requires =
    setuptools_scm
    wheel
    toml

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    pyLineFollowerTrackGenerator = pyLineFollowerTrackGenerator.__main__:main
